SERVER-31760 Optimize $expr to allow index use for equality predicates.